CONFIG_FILES = acls.nufw mark_field.conf mark_group.conf nuaclgen.conf nuauth.conf nuclient.conf nutop.conf periods.xml users-plaintext.nufw
SQL_DUMP = nulog-before-0.9.6.mysql.dump nulog-before-0.9.6.pgsql.dump nulog.ipv4.mysql.dump nulog.ipv6.mysql.dump nulog.pgsql.dump nulog-v1-v2.mysql.dump nulog-v2.0pre-2.0final.mysql.dump nulog-v20-v22.dump users-table.dump
LDAP_FILES = acls.schema timeranges.schema
AUTH_MYSQL_FILES = auth_mysql/auth_mysql.ipv4.mysql.dump auth_mysql/auth_mysql.ipv6.mysql.dump auth_mysql/check_net.mysql auth_mysql/ipauth_sessions.mysqldump auth_mysql/userinfo.mysqldump auth_mysql/usersettings.mysqldump
CERT_FILES = certs/admin@nufw.org-cert.pem certs/admin@nufw.org-key.pem certs/nuauth-cert.pem certs/nuauth-key.pem certs/NuFW-cacert.pem certs/nufw-cert.pem certs/nufw-key.pem certs/user@nufw.org-cert.pem certs/user@nufw.org-key.pem 

EXTRA_DIST = $(CONFIG_FILES) $(SQL_DUMP) $(LDAP_FILES) $(AUTH_MYSQL_FILES) $(CERT_FILES)
