SUBDIRS = inl_tests pki

EXTRA_DIST = defaults.cfg client.py common.py compatibility.py config.py \
	filter.py mysocket.py nuauth_conf.py nuauth.py nufw.py nufw_runner.py\
	plaintext.py test_all.py test_cert_auth.py test_client_auth.py \
	test_client_cert.py test_ipauth_guest.py test_mark_flag.py \
	test_mysql.py test_nufw_cert.py test_periods.py \
	test_plaintext_acl.py test_plaintext_auth.py test_reject.py \
	test_script.py test_syslog.py test_system.py \
	test_user_policy.py nufw_runner.py test_session_expire.py \
	test_invalid_tcp.py check_log.py test_conntrack.py test_acl.py \
	test_ldap_acl.py ldapacl.py
